css/main.css
/************* BASE STYLES *************/
* { box-sizing: border-box; }
body { font-family: 'Open Sans', sans-serif; font-size: 14px; line-height: 1.4; color: #364147; margin: 0; }
input, button { font-family: inherit; font-size: inherit; }
a { color: #faa541; text-decoration: none; }
ul { padding: 0; margin: 0; list-style: none; }
nav { padding: 10px 0; }
h1, h2, h3, h4, h5, h6 { margin: 0; }
/***************************************/

.container{
    margin-top: 0;
    margin-bottom: 0;
    margin-left: auto;
    margin-right: auto;
    max-width: 1170px;
}

section{
    display: flex;
}

.flex{
    display: flex;
}

.flex-column{
    flex-direction: column;
}

.flex-one{
    flex: 1;
}

.align-center{
    align-items: center;
}

.center{
    justify-content: center;
}

.space-between{
    justify-content: space-between;
}

.btn {
    cursor: pointer;
    border: 0;
    padding: 6px 12px;
    line-height: 1.4;
    border-radius: 3px;
}

.form-control {
    display: block; 
    padding: 6px 12px;
    line-height: 1.4;
    color: #8598a2; 
    border: 1px solid #a0a0a0;
}

.text-light{
    font-size: 30px;
    color: #a0a0a0;
}

.text-secondary{
    font-size: 30px;
    color: #faa541;
}

.text-primary{
    font-size: 16px;
    color: #364147;
}

.btn-default{
    color: white;
    background-color: #faa541;
}

.btn-primary{
    color: white;
    background-color: #364147;
}

.header-nav{
    border-bottom: 1px;
    border-color: #a0a0a0;
}

.brand{
    width: 170px;
    height: 85px;
    margin-left: -15px;
    margin-right: 60px;
}

.logo{
    max-width: 100%;
    height: auto;
}

.search-box{
    width: 330px;
    height: 30px;
    padding: 6px 12px;
    border: 1px solid #a0a0a0;
}

.search-button{
    background-color: #a0a0a0;
    color: white;
    width: 100px;
    height: 30px;
    border: 0;
    padding: 0;
}

.nav-list{
    padding-left: 0;
    width: 575px;
    margin-top: 10px;
}

.nav-list li a{
    font-size: 16px;
    text-transform: uppercase;
    font-weight: 700;
    letter-spacing: 0.2px;
}

.profile{
    margin-left: auto;
}

.account{
    padding: 15px;
    font-size: 18px;
    color: #364147;
    text-align: right;
}

.account a{
    font-size: 14px;
}

.profile-pic{
    width: 60px;
    height: 60px;
}

.profile-pic img{
    border-radius: 100px;
    max-width: 100%;
}

.hero{
    background-image: url('../img/hero.jpg'); 
    height: 400px;
    background-size: cover;
    background-position: center center;
    text-transform: uppercase;
    
}

.hero h1{
    position: relative;
    left: -30px;
}

.hero h2{
    color: #faa541;
}

.hero h1, .hero h2{
    font-size: 63px;
    font-weight: 700;
    line-height: 0.9;
}

.hero p{
    letter-spacing: 2px;
    font-weight: 700;
    font-size: 21px;
    margin: 0 0 10px
}

.banner{
    margin: 55px 15px;
    width: 100%;
    border-top: 1px solid #a0a0a0;
    border-bottom: 1px solid #a0a0a0;
    padding: 25px 0;
}

.banner img{
    width: 250px;
}

.banner-text{
    font-size: 30px;
    font-weight: 700;
    text-transform: uppercase;
    line-height: 1;
    text-align: center;
}

.banner-text > div:last-child{
    font-size: 16px;
    font-weight: 400;
    margin-top: 5px;
}

.category{
    flex: 0 0 25%;
    padding: 0 15px;
}

.category img{
    width: 100%;
}

.category-text{
    color: #364147;
    padding: 30px 0;
    text-transform: uppercase;
    text-align: center;
}

.category-text > div{
    font-size: 16px;
    font-weight: 200;
    color: #faa541;
}

.category-text h3{
    font-size: 30px;
    font-weight: 700;
    line-height: 1;
}

.full-banner{
    padding: 0 15px;
    margin: 50px 0;
    position: relative;
}

.full-banner:before{
    content: "";
    position: absolute;
    border: 1px solid #ffffff;
    top: 30px;
    bottom: 30px;
    left: 50px;
    right: 50px;
    z-index: 1;
}

.full-banner-image{
    flex: 0 0 58.333333%;
    background-image: url('../img/vista.jpg');
    background-size: cover;
    background-position: top center;
    min-height: 400px;
}

.full-banner-sidebar{
    flex: 0 0 41.666667%;
    background-color: #364147;
    text-transform: uppercase;
    padding: 30px;
    color: white;
}

.full-banner-sidebar h4{
    font-size: 40px;
    font-weight: 700;
    color: #637f94;
    font-style: italic;
    line-height: 1;
}

.full-banner-sidebar h4:after{
    content: "";
    width: 100px;
    height: 1px;
    background-color: #faa541;
    margin: 20px auto;
    display: block;
}

.full-banner-sidebar > div:nth-of-type(1) { 
    font-size: 60px; 
    font-weight: 700; 
    line-height: 1; 
}

.full-banner-sidebar > div:nth-of-type(2) { 
    font-size: 25px; 
    font-weight: 200; 
    letter-spacing: 3px; 
}

.full-banner-sidebar .btn.btn-default{
    margin-top: 50px;
    text-transform: uppercase;
    letter-spacing: 1px;
    z-index: 1;
}

footer{
    flex-wrap: wrap;
    position: relative;
    z-index: 0;
    min-height: 330x;
    background-color: black;
}

footer::after{
    content: "";
    background-color: #a0a0a0;
    width: 75%;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 1;
}

.lists{
    flex: 0 0 75%;
    left: 15px;
    right: 15px;
    padding: 40px 0;
}

.link-header{
    text-transform: uppercase;
    font-size: 16px;
    font-weight: 700;
    margin-bottom: 15px;
}

footer a{
    color: white;
    text-transform: uppercase;
    font-size: 12px;
    padding: 0 0 4px;
    text-decoration: underline;
}

.social ul li{
    display: inline-block;
}

.social ul li a{
    display: block;
    width: 23px;
    height: 23px;
    background-size: 23px 23px;
    background-position: center;
}

.twitter{
    background-image: url(../img/twitter.svg);
}

.facebook{
    background-image: url(../img/facebook.svg);
}

.instagram{
    background-image: url(../img/instagram.svg);
}

.pinterest{
    background-image: url(../img/pinterest.svg);
}

.newsletter .link-header{
    font-size: 12px;
    font-weight: 400;
    margin-bottom: 5px;
}

.newsletter .link-subheader{
    font-style: italic;
    font-size: 12px;
    font-weight: 400;
    margin-bottom: 15px;
}

.newsletter input{
    border: 1px solid #364147;
    width: 200px;
    margin-bottom: 10px;
}

.newsletter button{
    width: 150px;
    min-width: auto;
    text-transform: uppercase;
    letter-spacing: 1px;
}

.ps{
    flex: 0 0 25%;
    padding: 40px 0;
    color: #e5e5e5;
    font-size: 16px;
}

.ps img{
    max-width: 230px;
}

.demo{
    padding: 0 30px;
}

.demo::before{
    content: "";
    display: block;
    width: 100%;
    height: 1px;
    margin: 30px 0;
    background: linear-gradient(to right,#f05a28 0,#e80a89 100%);
}

